--- a/.env
+++ b/.env
@@ -11,4 +11,4 @@ DATABASE_URL=postgres://user:B1PdOTrnueaKEmUQhaDfJ8HkzFfOJRPd@dpg-confcs0cmk4c73
 DATABASE_URL_LOCAL=postgres://user:Tarantula5@localhost/missingpurrson
 NPM_FLAGS=--legacy-peer-deps
 VITE_API_URL=https://mpser.onrender.com/api/v1
-NODE_ENV=production
+NODE_ENV=development
