--- a/.gitignore
+++ b/.gitignore
@@ -1,24 +1,20 @@
-# Logs
-logs
-*.log
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-pnpm-debug.log*
-lerna-debug.log*
-
+# Node modules
 node_modules
-dist
-dist-ssr
-*.local
 
-# Editor directories and files
-.vscode/*
-!.vscode/extensions.json
-.idea
-.DS_Store
-*.suo
-*.ntvs*
-*.njsproj
-*.sln
-*.sw?
+# Logs
+*.log
+
+# SQLite DBs
+*.sqlite3
+
+# Build products
+/dist
+
+# Jest coverage report
+coverage/*
+
+# Dotenv env settings
+.env
+
+# Build directory
+/dist
